# Voice-coach

./: README.md  main.py  pyproject.toml  requirements.txt
face_tracking/: tracker.py
