[project]
name = "voice-coach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.9.0",
    "mediapipe>=0.10.35",
    "numpy==1.26.4",
    "opencv-python==4.10.0.84",
    "pandas==2.2.2",
    "scipy==1.13.0",
    "tensorflow>=2.18.1",
]
